public/style/style.css
@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');

body {
    background: #e2e1e0;
    text-align: center;
    font-family: 'Arimo', sans-serif;
}

.flex-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.card {
    display: inline-block;
    overflow: hidden;
    background: white;
    position: relative;
    border-radius: 2px;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    margin: 1rem;
    width: 300px;
}

.card:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.card .poster {
    border: 10px solid white;
}

.card .poster img {
    max-width: 100%;
    max-height: 100%;
    border-radius: 2px;
}

.card .info {
    color: #1d1d1d;
}

.card .info h1 {
    font-weight: 700;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: 0.4s ease;
    background-color: black;
}

.overlay h2 {
    position: relative;
    color: white;
    font-size: 25px;
    padding-top: 20%;
    padding-bottom: 10%;
    text-align: center;
}

.card:hover .overlay {
    opacity: 0.8;
    cursor: pointer;
}

